--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
+python-dotenv==1.1.1
 redis==6.4.0
 sqlparse==0.5.3
 tzdata==2025.2
